# haskell-scotty-realworld-example-app

./: .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-builder.sh  docker-compose.yaml  docker-compose.yml  docker.env  package.yaml  realworld.cabal  stack.yaml
app/: Main.hs
postgresql/: v1_0__initial.sql
scripts/: dev.sh  killRun.sh
secrets/: jwk.enc  jwk.sig
secrets/tls/: certificate.csr  certificate.pem  key.pem
src/: JWT.hs  Lib.hs  Main.hs  PG.hs  RealWorld.hs  RealWorldClient.hs  Struct.hs  Web.hs
src/Adapter/: JWT.hs  PG.hs
src/Adapter/HTTP/: API.hs  Client.hs
src/Core/: Services.hs  Types.hs
src/Feature/Article/: HTTP.hs  PG.hs  Service.hs  Types.hs
src/Feature/Auth/: HTTP.hs  JWT.hs  Types.hs
src/Feature/Comment/: HTTP.hs  PG.hs  Service.hs  Types.hs
src/Feature/Common/: HTTP.hs  Types.hs  Util.hs
src/Feature/User/: HTTP.hs  JWT.hs  PG.hs  Service.hs  Types.hs
src/Misc/: Client.hs
src/Platform/: AesonUtil.hs  HTTP.hs  JWT.hs  PG.hs
test/: Main.hs  Spec.hs
test/Spec/: Article.hs  Comment.hs  Common.hs  User.hs
